--- a/update/catalog/view/theme/antropy/template/common/header.twig
+++ b/update/catalog/view/theme/antropy/template/common/header.twig
@@ -1,81 +1,212 @@
-<!DOCTYPE html>
-<!--[if IE]><![endif]-->
-<!--[if IE 8 ]><html dir="{{ direction }}" lang="{{ lang }}" class="ie8"><![endif]-->
-<!--[if IE 9 ]><html dir="{{ direction }}" lang="{{ lang }}" class="ie9"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-<html dir="{{ direction }}" lang="{{ lang }}">
-<!--<![endif]-->
+<!doctype html>
+
+ <!--установка языка шаблона  вместо тега <html lang="en"> -->
+ <html dir="{{ direction }}" lang="{{ lang }}">
+ 
+ 
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{ title }}</title>
-<base href="{{ base }}" />
-{% if description %}
-<meta name="description" content="{{ description }}" />
-{% endif %}
-{% if keywords %}
-<meta name="keywords" content="{{ keywords }}" />
-{% endif %}
-<script src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
-<link href="catalog/view/javascript/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />
-<script src="catalog/view/javascript/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<link href="catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-<link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,300,700" rel="stylesheet" type="text/css" />
-<link href="catalog/view/theme/antropy/stylesheet/stylesheet.css" rel="stylesheet">
-{% for style in styles %}
-<link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
-{% endfor %}
-{% for script in scripts %}
-<script src="{{ script }}" type="text/javascript"></script>
-{% endfor %}
-<script src="catalog/view/javascript/common.js" type="text/javascript"></script>
-{% for link in links %}
-<link href="{{ link.href }}" rel="{{ link.rel }}" />
-{% endfor %}
-{% for analytic in analytics %}
-{{ analytic }}
-{% endfor %}
+    <!--установка категории viewport для адаптивности  -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!-- вывод title  Элемент title дает представление о содержании страницы и ее релевантности поисковому запросу. 
+	Он может использоваться в качестве заголовка в сниппете страницы.  -->
+    <title>{{ title }}</title>
+	
+	<!-- вывод метатега для поисковой системы  -->
+    {% if robots %}
+        <meta name="robots" content="{{ robots }}" />
+    {% endif %}
+	
+	<!-- базовый URL странице  -->
+    <base href="{{ base }}" />
+	
+	<!-- вывод description -->
+    {% if description %}
+        <meta name="description" content="{{ description }}" />
+    {% endif %}
+	
+	<!-- вывод keywords -->
+    {% if keywords %}
+        <meta name="keywords" content="{{ keywords }}" />
+    {% endif %}
+	
+	<!-- метатеги социальных сетей   -->
+    <meta property="og:title" content="{{ title }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ og_url }}" />
+	
+    {% if og_image %}
+        <meta property="og:image" content="{{ og_image }}" />
+    {% else %}
+        <meta property="og:image" content="{{ logo }}" />
+    {% endif %}
+    <meta property="og:site_name" content="{{ name }}" />
+	
+	<!-- подключение скриптов  -->
+    <script src="catalog/view/theme/antropy/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="catalog/view/theme/antropy/js/main.js"></script>
+
+	<!-- подключение стилей  -->
+    {% for style in styles %}
+        <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
+    {% endfor %}
+	
+	<!-- подключение javascript  -->
+    {% for script in scripts %}
+        <script src="{{ script }}" type="text/javascript"></script>
+    {% endfor %}
+
+	<!--   -->
+    <script src="catalog/view/theme/antropy/js/common.js" type="text/javascript"></script>
+	
+	<!-- подключение стилей   -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link rel="stylesheet" href="catalog/view/theme/antropy/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="catalog/view/theme/antropy/css/main.css">
+
+	<!-- вывод  favikon  -->
+    {% for link in links %}
+        <link href="{{ link.href }}" rel="{{ link.rel }}" />
+    {% endfor %}
+
+	<!--  вывод кода  google analytic -->
+    {% for analytic in analytics %}
+        {{ analytic }}
+    {% endfor %}
+	
 </head>
+
+
 <body>
-<nav id="top">
-  <div class="container">{{ currency }}
-    {{ language }}
-    <div id="top-links" class="nav pull-right">
-      <ul class="list-inline">
-        <li><a href="{{ contact }}"><i class="fa fa-phone"></i></a> <span class="hidden-xs hidden-sm hidden-md">{{ telephone }}</span></li>
-        <li class="dropdown"><a href="{{ account }}" title="{{ text_account }}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_account }}</span> <span class="caret"></span></a>
-          <ul class="dropdown-menu dropdown-menu-right">
-            {% if logged %}
-            <li><a href="{{ account }}">{{ text_account }}</a></li>
-            <li><a href="{{ order }}">{{ text_order }}</a></li>
-            <li><a href="{{ transaction }}">{{ text_transaction }}</a></li>
-            <li><a href="{{ download }}">{{ text_download }}</a></li>
-            <li><a href="{{ logout }}">{{ text_logout }}</a></li>
-            {% else %}
-            <li><a href="{{ register }}">{{ text_register }}</a></li>
-            <li><a href="{{ login }}">{{ text_login }}</a></li>
-            {% endif %}
-          </ul>
-        </li>
-        <li><a href="{{ wishlist }}" id="wishlist-total" title="{{ text_wishlist }}"><i class="fa fa-heart"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_wishlist }}</span></a></li>
-        <li><a href="{{ shopping_cart }}" title="{{ text_shopping_cart }}"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_shopping_cart }}</span></a></li>
-        <li><a href="{{ checkout }}" title="{{ text_checkout }}"><i class="fa fa-share"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_checkout }}</span></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
 <header>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        <div id="logo">{% if logo %}<a href="{{ home }}"><img src="{{ logo }}" title="{{ name }}" alt="{{ name }}" class="img-responsive" /></a>{% else %}
-          <h1><a href="{{ home }}">{{ name }}</a></h1>
-          {% endif %}</div>
-      </div>
-      <div class="col-sm-5">{{ search }}</div>
-      <div class="col-sm-3">{{ cart }}</div>
-    </div>
-  </div>
+
+    <div class="header-top py-3">
+        <div class="container">
+            <div class="row justify-content-between">
+
+                <div class="col">
+                    <a href="tel:5551234567"><span class="icon-phone">&#9743;</span> 555 123-45-67</a>
+                </div>
+
+                <div class="col icons text-end">
+
+                    <form id="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search..." aria-label="Search..." name="s">
+                            <button class="btn close-search" type="button"><i class="fas fa-times"></i></button>
+                            <button class="btn" type="submit"><i class="fas fa-search"></i></button>
+                        </div>
+                    </form>
+                    <a href="#" class="open-search"><i class="fas fa-search"></i></a>
+
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#cart-modal" class="open-cart-modal">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="badge bg-danger rounded-pill count-items">0</span>
+                    </a>
+                    <div class="modal fade" id="cart-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Корзина</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <table class="table text-start">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">Фото</th>
+                                            <th scope="col">Товар</th>
+                                            <th scope="col">Кол-во</th>
+                                            <th scope="col">Цена</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td><a href="#"><img src="catalog/view/theme/antropy/image/products/apple_cinema_30.jpg" alt=""></a></td>
+                                            <td><a href="#">Apple cinema 30"</a></td>
+                                            <td>1</td>
+                                            <td>1000</td>
+                                        </tr>
+                                        <tr>
+                                            <td><a href="#"><img src="catalog/view/theme/antropy/image/products/canon_eos_5d_1.jpg" alt=""></a></td>
+                                            <td><a href="#">Canon EOS 5D</a></td>
+                                            <td>1</td>
+                                            <td>750</td>
+                                        </tr>
+                                        <tr>
+                                            <td><a href="#"><img src="catalog/view/theme/antropy/image/products/iphone_1.jpg" alt=""></a></td>
+                                            <td><a href="#">iPhone</a></td>
+                                            <td>1</td>
+                                            <td>1000</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Продолжить покупки</button>
+                                    <button type="button" class="btn btn-primary">Оформить заказ</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a href="#"><i class="far fa-heart"></i></a>
+
+                    <div class="dropdown d-inline-block">
+                        <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-user"></i></a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Авторизация</a></li>
+                            <li><a class="dropdown-item" href="#">Регистрация</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div><!-- header-top -->
+
+    <div class="header-bottom py-2">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid p-0">
+                    <a class="navbar-brand" href="index.html">Shop Brand</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="category.html">Компьютеры</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="category.html">Планшеты</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Ноутбуки
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="category.html">Mac</a></li>
+                                    <li><a class="dropdown-item" href="category.html">Windows</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="category.html">Телефоны</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="category.html">Камеры</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div><!-- header-bottom -->
+
 </header>
-{{ menu }}
